boinc (4.72-3) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * boinc-server:
    - Install Python BOINC module to /usr/lib/python2.3/site-packages/Boinc.
    - Install HTML files to /usr/share/boinc-server/html.    
  * debian/control:
    - Build depend on the newer libmysqlclient15-dev package.
  * debian/rules:
    - Rewrote debian/rules without CDBS. CFLAGS and CXXFLAGS are now forwarded
      to the build process.
    - Compile only the BOINC core client program with "-O3 -ffast-math".
    - Remove all files that are created by the autotools during the
      pre-build target in the clean target.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 19 Aug 2005 15:07:22 +0200

boinc (4.72-2) experimental; urgency=low

  [ Frank S. Thomas ]
  * Patched the BOINC Manager so that it compiles with Debian's experimental
    wxWidgets version 2.6.1 (see: 03_wxwidgets_with_unicode.patch).
  * Install "BOINC Manager.mo" files under /usr/share/locale/.
  * Use LSB init-functions for the boinc-client init script and add lsb-base
    dependency to boinc-client.
  * debian/control.in:
    - Added libjpeg62-dev to Build-Depends.
    - boinc-manager properly conflicts with and replaces now the old boinc-gui
      package. The experimental state of this package was a lame excuse for
      not providing a smooth upgrade path in 4.27-1.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 13 Aug 2005 17:50:58 +0200

boinc (4.72-1) experimental; urgency=low

  * The "You are a credit junkie!" release.
  
  [ Frank S. Thomas ]
  * New upstream release.
  * debian/rules:
    - Set default C/C++ compiler flags to "-g -O3 -ffast-math".
  * debian/control.in:
    - Added missing build dependencies for the BOINC graphics API library
      (libsm-dev, libice-dev, libxi-dev, libx11-dev).

  [ Steffen Moeller ]
  * debian/control.in:
    - Revised long description of the boinc-client package.
    - Added "boinc-manager | kboincspy" to boinc-client's Suggests field. 
