@@ -1,8 +1,9 @@
 boinc (4.72-3) UNRELEASED; urgency=low
 
+  [ Frank S. Thomas ]
   * NOT RELEASED YET
+  * Create python-boinc, python2.3-boinc and python2.4-boinc packages.
   * boinc-server:
-    - Install Python BOINC module to /usr/lib/python2.3/site-packages/Boinc.
     - Install HTML files to /usr/share/boinc-server/html.    
   * debian/control:
     - Build depend on the newer libmysqlclient15-dev package.
@@ -195,7 +196,7 @@ boinc (4.13.20041201-1) experimental; urgency=low
   * New upstream release.
   * Package boinc-dev also contains Makefile.am as searched for by SETI client.
 
- -- Steffen Moeller <moeller@pzr.uni-rostock.de>  Sun, 5 Dec 2004 23:32:17 +0100
+ -- Steffen Moeller <moeller@pzr.uni-rostock.de>  Sun,  5 Dec 2004 23:32:17 +0100
 
 boinc (4.13.20041119-1) experimental; urgency=low
 
